move common to repo root; remote scritps and simplify the gcloud auth process

--- a/common/Makefile
+++ b/common/Makefile
@@ -1,26 +1,30 @@
-include ../common/env.sh
+include ../../common/env.sh
 include env.sh
-export GCP_PROJECT_ID := $(notdir $(shell pwd))
-export TF_VAR_project_id := ${GCP_PROJECT_ID}
-export TF_VAR_project_name := ${TF_VAR_project_id}
 
-all: help
+# Get the current dir as the project id:
+export GCP_PROJECT_ID := $(notdir $(shell pwd))
+export GCP_PROJECT_NAME := ${GCP_PROJECT_ID}
+export TF_VAR_org_id := $(shell cat ${ORG_ID_FILE})
+export TF_VAR_billing_id := $(shell cat ${BILLING_ID_FILE})
+export TF_VAR_project_id := ${GCP_PROJECT_ID}
 
 help: ## this info
 	@# adapted from https://marmelab.com/blog/2016/02/29/auto-documented-makefile.html
 	@echo '_________________'
 	@echo '| Make targets: |'
 	@echo '-----------------'
-	@cat ../common/Makefile | grep -E '^[a-zA-Z_-]+:.*?## .*$$' | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
+	@cat ../../common/Makefile | grep -E '^[a-zA-Z_-]+:.*?## .*$$' | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
 
-remote: ## setup and config Terraform remote state
+auth: ## activate gclound service account
+	@gcloud auth activate-service-account --key-file ${GOOGLE_APPLICATION_CREDENTIALS}
+
+remote: auth ## setup and config Terraform remote state
 	@echo set remote state to gcs://${REMOTE_STATE_BUCKET}/${REMOTE_STATE_PATH}
-	@../../scripts/config.sh
 
-	@if ! gsutil ls gs://${REMOTE_STATE_BUCKET}; \
+	@if ! gsutil ls -p ${GCP_ADMIN_PROJECT_ID} gs://${REMOTE_STATE_BUCKET}; \
 	then \
 		echo creating bucket for remote state ... ; \
-		gsutil mb gs://${REMOTE_STATE_BUCKET}; \
+		gsutil mb -p ${GCP_ADMIN_PROJECT_ID} gs://${REMOTE_STATE_BUCKET}; \
 		sleep 30; \
 	fi
 
@@ -55,5 +59,5 @@ remote-push: remote ## push state to remote
 remote-pull: remote ## pull state from remote
 	terraform remote pull
 
-.PHONY: all remote plan apply show destroy clean remote_push remote_pull
+.PHONY: auth remote plan apply show destroy clean remote_push remote_pull
 .PHONY: help
